--- a/views/play.erb
+++ b/views/play.erb
@@ -2,4 +2,4 @@
 <h2>And now let's welcome the players!!</h2>
 
 <h3>Player 1 is <%= @player1 %></h3>
-<h3>Player 2 is <%= @player2 %></h3>
+<h3>Player 2 is <%= @player2 %>: 60HP</h3>
