--- a/views/play.erb
+++ b/views/play.erb
@@ -3,3 +3,11 @@
 
 <h3>Player 1 is <%= @player1 %></h3>
 <h3>Player 2 is <%= @player2 %>: 60HP</h3>
+
+
+<form action="/attack" method="post">
+  <input type="submit" value="attack">
+</form>
+
+
+
