--- a/views/play.erb
+++ b/views/play.erb
@@ -1,13 +1,10 @@
 
 <h2>And now let's welcome the players!!</h2>
 
-<h3>Player 1 is <%= @player1 %></h3>
-<h3>Player 2 is <%= @player2 %>: 60HP</h3>
+<h3>Player 1 is <%= @player1.name %>: <%= @player1.hp %>HP</h3>
+<h3>Player 2 is <%= @player2.name %>: <%= @player2.hp %>HP</h3>
 
 
 <form action="/attack" method="post">
   <input type="submit" value="attack">
 </form>
-
-
-
