--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,9 +1,9 @@
 
-<h1><%= @player1.name %> attacked <%= @player2.name %></h1>
+<h1><%= @game.player1.name %> attacked <%= @game.player2.name %></h1>
 
-<h3>Player 1 is <%= @player1.name %>: <%= @player1.hp %>HP</h3>
-<h3>Player 2 is <%= @player2.name %>: <%= @player2.hp %>HP</h3>
+<h3>Player 1 is <%= @game.player1.name %>: <%= @game.player1.hp %>HP</h3>
+<h3>Player 2 is <%= @game.player2.name %>: <%= @game.player2.hp %>HP</h3>
 
 <form action="/attack" method="post">
-  <input type="submit" value="re-attack">
+  <input type="submit" value="attack">
 </form>
