--- a/views/play.erb
+++ b/views/play.erb
@@ -1,8 +1,8 @@
 
 <h2>And now let's welcome the players!!</h2>
 
-<h3>Player 1 is <%= @player1.name %>: <%= @player1.hp %>HP</h3>
-<h3>Player 2 is <%= @player2.name %>: <%= @player2.hp %>HP</h3>
+<h3>Player 1 is <%= @game.player1.name %>: <%= @game.player1.hp %>HP</h3>
+<h3>Player 2 is <%= @game.player2.name %>: <%= @game.player2.hp %>HP</h3>
 
 
 <form action="/attack" method="post">
