--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,8 +1,11 @@
 
-<h1><%= @game.player1.name %> attacked <%= @game.player2.name %></h1>
+<%# putting opponent attacjked the current player is because before this is displayed, the opponent and current ploayers are SWAPPED %>
+<h1><%= @game.opponent_player.name %> attacked <%= @game.current_player.name %></h1>
 
 <h3>Player 1 is <%= @game.player1.name %>: <%= @game.player1.hp %>HP</h3>
 <h3>Player 2 is <%= @game.player2.name %>: <%= @game.player2.hp %>HP</h3>
+
+<h3><%= @game.current_player.name %>'s turn</h3>
 
 <form action="/attack" method="post">
   <input type="submit" value="attack">
