--- a/views/play.erb
+++ b/views/play.erb
@@ -4,6 +4,7 @@
 <h3>Player 1 is <%= @game.player1.name %>: <%= @game.player1.hp %>HP</h3>
 <h3>Player 2 is <%= @game.player2.name %>: <%= @game.player2.hp %>HP</h3>
 
+<h3><%= @game.current_player.name %>'s turn</h3>
 
 <form action="/attack" method="post">
   <input type="submit" value="attack">
